--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                           <figure class="item lbvideo category_all category_youtube-videos">
                             <div class="portfolio-item-img">
                               <img src="img/6.jpg" alt="YouTube Video 1" title="" />
-                              <a href="https://youtube.com/shorts/IbjBtUrQds0" class="_blank"></a>
+                              <a href="https://youtube.com/shorts/IbjBtUrQds0"</a>
                             </div>
 
                             <i class="fas fa-video"></i>
