--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Blog Zann</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="description" content="Blog Zann" />
-    <meta name="keywords" content="vcard, resposnive, retina, resume, jquery, css3, bootstrap, portfolio" />
+    <meta name="keywords" content="resposnive, retina, resume, jquery, css3, bootstrap, portfolio" />
     <meta name="author" content="lmpixels" />
     <link rel="shortcut icon" href="huruf f.ico">
 
@@ -339,7 +339,6 @@
                           </div>
                         </div>
                       </div>
-                    <!-- Skills & Certificates -->
                     <div class="col-xs-12 col-sm-5">
                       <div class="block-title">
                         <h3>Skills</h3>
@@ -483,7 +482,19 @@
                             <span class="category">YouTube Videos</span>
                           </figure>
                         </div>
-                      </div>
+                            <i class="far fa-file-alt"></i>
+                            <h4 class="name"><span>Kenangan</span></h4>
+                            <span class="category">Foto</span>
+                          </figure>
+                          <figure class="img">
+                            <div class="portfolio-item-img">
+                              <img src="img/2.jpeg" alt="Foto Bareng" title="" />
+                            </div>
+                            <i class="fas fa-video"></i>
+                            <h4 class="name"><span>Kenangan</span>Foto Bareng</h4>
+                            <span class="category">Foto Bareng</span>
+                          </figure>
+                       </div>
                       <!-- End of Portfolio Content -->
                     </div>
                   </div>
