--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
                      <!-- Google Map -->
                     <div class="col-xs-12 col-sm-12">
                       <!-- Google Map -->
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d201.2001508666239!2d110.90230976686912!3d-7.492178509857219!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sid!2sid!4v1683611675879!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3955.7547297533674!2d110.89987787397173!3d-7.492310273890181!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a1082ac2e34bf%3A0x8141090f9f74f738!2sMasjid%20Jami&#39;%20Al%20Mursalin%20Kedungrejo!5e0!3m2!1sid!2sid!4v1683705172273!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                       </div>
                     </div>
                     <!-- End of Google Map -->
