--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Blog Zann" />
     <meta name="keywords" content="resposnive, retina, resume, jquery, css3, bootstrap, portfolio" />
     <meta name="author" content="lmpixels" />
-    <link rel="shortcut icon" href="huruf f.ico">
+    <link rel="shortcut icon" href="img/1.PNG">
 
 
     <link rel="stylesheet" href="css/reset.css" type="text/css">
